# Paddle2BMmodel

./: CMakeLists.txt  README.md  config.cc  config.h  config.txt  main.cc  utility.cc  utility.h
include/: config.h
src/: main.cc
tools/: build_p2b.sh  build_p2u.sh  fluid_infer_image.py  segment_paddle_model.py
